src/packages/admin-ui-components/src/layouts/default/styles.module.css
.wrapper {
	flex-direction: column;
	user-select: none;
	overflow: hidden;
	height: 100%;
	width: 100%;
	display: flex;
}

.container {
	width: 100%;
	height: 100%;
	flex-shrink: 0;
	display: flex;
	overflow: hidden;
}

.sidebar {
	height: 100%;
	min-width: 0;
	position: relative;
}

.resizer {
	flex-basis: 6px;
	z-index: 2;
	cursor: col-resize;
}

.content {
	padding: 20px 20px 0px 20px;
	flex-basis: 0;
	flex-grow: 1;
	min-width: 0;
	display: flex;
	flex-direction: column;
}

